# docs/swagger.json
@@ -7,7 +7,7 @@
         "version": "V0.0.1"
     },
     "paths": {
-        "/api/v1/demo/ping": {
+        "/api/v1/demo/create": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -15,7 +15,7 @@
                 "tags": [
                     "Demo"
                 ],
-                "summary": "Ping接口",
+                "summary": "创建",
                 "parameters": [
                     {
                         "description": "body",
@@ -33,7 +33,148 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/resp.Resp"
+                                    "$ref": "#/definitions/base.Resp"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/models.Demo"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/demo/get": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Demo"
+                ],
+                "summary": "获得",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/base.ReqId"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 200, \"data\": [...]}",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/base.Resp"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/models.Demo"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/demo/page": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Demo"
+                ],
+                "summary": "Page接口",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.DemePageReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 200, \"data\": [...]}",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/base.Resp"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "allOf": [
+                                                {
+                                                    "$ref": "#/definitions/base.PageResp"
+                                                },
+                                                {
+                                                    "type": "object",
+                                                    "properties": {
+                                                        "list": {
+                                                            "type": "array",
+                                                            "items": {
+                                                                "$ref": "#/definitions/models.Demo"
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            ]
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/demo/update": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Demo"
+                ],
+                "summary": "更新",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.DemoDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 200, \"data\": [...]}",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/base.Resp"
                                 },
                                 {
                                     "type": "object",
@@ -62,7 +203,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/resp.Resp"
+                                    "$ref": "#/definitions/base.Resp"
                                 },
                                 {
                                     "type": "object",
@@ -91,7 +232,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/resp.Resp"
+                                    "$ref": "#/definitions/base.Resp"
                                 },
                                 {
                                     "type": "object",
@@ -109,33 +250,81 @@
         }
     },
     "definitions": {
+        "base.PageResp": {
+            "type": "object",
+            "properties": {
+                "list": {
+                    "description": "数据列表"
+                },
+                "page": {
+                    "description": "当前第几页",
+                    "type": "integer"
+                },
+                "size": {
+                    "description": "分页大小",
+                    "type": "integer"
+                },
+                "total": {
+                    "description": "总条数",
+                    "type": "integer"
+                }
+            }
+        },
+        "base.ReqId": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "description": "主键ID",
+                    "type": "integer"
+                }
+            }
+        },
+        "base.Resp": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "返回码",
+                    "type": "integer"
+                },
+                "data": {
+                    "description": "数据"
+                },
+                "msg": {
+                    "description": "消息",
+                    "type": "string"
+                },
+                "reqId": {
+                    "description": "`json:\"请求id\"`",
+                    "type": "string"
+                }
+            }
+        },
+        "dto.DemePageReq": {
+            "type": "object",
+            "properties": {
+                "page": {
+                    "description": "页码",
+                    "type": "integer"
+                },
+                "size": {
+                    "description": "每页大小",
+                    "type": "integer"
+                }
+            }
+        },
         "dto.DemoDto": {
             "type": "object",
             "required": [
-                "email",
-                "name",
-                "password",
-                "re_password"
+                "name"
             ],
             "properties": {
-                "age": {
-                    "type": "integer"
-                },
-                "email": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "integer"
                 },
                 "name": {
-                    "type": "string"
-                },
-                "password": {
                     "type": "string",
-                    "minLength": 6
-                },
-                "re_password": {
-                    "type": "string"
+                    "maxLength": 64,
+                    "minLength": 2
                 }
             }
         },
@@ -146,21 +335,6 @@
                     "type": "integer"
                 },
                 "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "resp.Resp": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer"
-                },
-                "data": {},
-                "msg": {
-                    "type": "string"
-                },
-                "reqId": {
                     "type": "string"
                 }
             }
